[gd_scene load_steps=2 format=3 uid="uid://dj1vtvd8s43cv"]

[ext_resource type="Script" path="res://menu/menu.gd" id="1_brq87"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_brq87")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -68.0
offset_right = 75.0
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="CreateButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Create"

[node name="Join" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Join local"

[node name="IP" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Join LAN via IP"
alignment = 1

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="VBoxContainer/CreateButton" to="." method="_on_create_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Join" to="." method="_on_join_pressed"]
[connection signal="text_submitted" from="VBoxContainer/IP" to="." method="_on_ip_text_submitted"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
